[vcs] Explicitly wrap LocalChangeListDiffRequest#installTracker in read action (IJPL-229364)
The problem is the `RemoteChangesViewDiffPreviewProcessor` which handles show diff requests in `Dispatchers.UiWithModelAccess`.
For now adding explicit lock seems like a much better solution than running it under lock unconditionally.

GitOrigin-RevId: ad4ebd8ab72dd0062d17620e1788aa5bc7b4e985